# manila-specs

./: .gitignore  .gitreview  CONTRIBUTING.rst  LICENSE  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
priorities/: ocata-priorities.rst
specs/: specs_deadlines.rst  template.rst
specs/antelope/: backup_share.rst
specs/bobcat/: allow-locking-shares-against-deletion.rst  protect-access-rules.rst  spec-lite-netapp-activeiq-weigher.rst
specs/caracal/: deferred_deletion.rst
specs/dalmatian/: add-ensure-shares-api.rst  share_encryption.rst  spec-lite-pass-resource-metadata-updates-to-backend-drivers.rst
specs/flamingo/: share_backup_out_of_place_restore.rst  share_encryption.rst
specs/gazpacho/: allow-force-deletion-of-used-subnets.rst  qos_types.rst  remove-v1.rst  spec-lite-add-human-readable-export-location-to-share-manage.rst
specs/hibiscus/: lustre-driver.rst  manila-per-process-healthchecks.rst  share-server-replica.rst
specs/newton/: auth-access-keys.rst  hpb-support.rst  manila-share-revert-to-snapshot.rst  newton-migration-improvements.rst
specs/ocata/: add-db-manage-purge.rst  add-share-type-filter-to-get-pools.rst  create-share-from-snapshot-extra-spec.rst  fix-and-improve-access-rules.rst  manila-share-groups.rst  manila-share-revert-to-snapshot.rst  mechanism-to-prevent-race-conditions.rst  mountable-snapshots.rst  ocata-migration-improvements.rst  scenario-tests.rst  stochastic-weighing-scheduler.rst  support-quota-usage-in-detail.rst
specs/pike/: README.rst  add-share-groups-quota.rst  (+8 more)
(+38 files in other folders)
