[metadata]
name = manila-specs
summary = Manila specs repo
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://specs.openstack.org/openstack/manila-specs/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    License :: Creative Commons Attribution
    Operating System :: POSIX :: Linux
