[metadata]
name = manila-specs
summary = Manila specs repo
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://specs.openstack.org/openstack/manila-specs/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    License :: Creative Commons Attribution
    Operating System :: POSIX :: Linux
